// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDialog should render a disabled component and match snapshot 1`] = `

<div tabindex="-1"
     class="v-dialog__content"
     style="z-index: 0;"
>
  <div class="v-dialog"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render a fullscreen component and match snapshot 1`] = `

<div tabindex="-1"
     class="v-dialog__content"
     style="z-index: 0;"
>
  <div class="v-dialog v-dialog--fullscreen"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render a lazy component and match snapshot 1`] = `

<div tabindex="-1"
     class="v-dialog__content"
     style="z-index: 0;"
>
  <div class="v-dialog"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render a persistent component and match snapshot 1`] = `

<div tabindex="-1"
     class="v-dialog__content"
     style="z-index: 0;"
>
  <div class="v-dialog v-dialog--persistent"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render a scrollable component and match snapshot 1`] = `

<div tabindex="-1"
     class="v-dialog__content"
     style="z-index: 0;"
>
  <div class="v-dialog v-dialog--scrollable"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render component and match snapshot 1`] = `

<div tabindex="-1"
     class="v-dialog__content"
     style="z-index: 0;"
>
  <div class="v-dialog"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render component with custom origin and match snapshot 1`] = `

<div tabindex="-1"
     class="v-dialog__content"
     style="z-index: 0;"
>
  <div class="v-dialog"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render component with custom transition and match snapshot 1`] = `

<div tabindex="-1"
     class="v-dialog__content"
     style="z-index: 0;"
>
  <div class="v-dialog"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render component with custom width (max-width) and match snapshot 1`] = `

<div tabindex="-1"
     class="v-dialog__content"
     style="z-index: 0;"
>
  <div class="v-dialog"
       style="max-width: 100px; display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render component with custom width and match snapshot 1`] = `

<div tabindex="-1"
     class="v-dialog__content"
     style="z-index: 0;"
>
  <div class="v-dialog"
       style="width: 50%; display: none;"
  >
  </div>
</div>

`;
